# BIAV-SC-CODE

./: .coveragerc  .gitignore  .gitleaks.toml  .gitleaksignore  .searchignore  BIAV-SC.md  CLAUDE.md  README.md  RELEASES.md  _frida_hook_v2.py  _run_hook_v2.bat  package-lock.json  package.json  setup.cfg  todo.md
.claude/: settings.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
Public-Info-Pool/: types.json
assets/: index.md
docs/: testing-strategy.md
extracted_lua/: README_提取说明.md  lua_scripts_inventory.csv
kb/: index.html
memory/: advanced-memory-design.md  biav-info-classification.md  black-pool-design.md  blackpool-architecture.md  boot-snapshot.md  bpt-architecture-snapshot-2026-04-19.md  bpt-architecture-summary-template.md  bpt-desktop-design-spec-ref.md  bpt-guidance-log.md  bpt-guidance-protocol.md  bpt-master-plan.md  bpt-next-build-verification.md  bpt-next-design.md  bpt-positioning.md  capability-annotations.json  capability-index.md  capability-registry.json  collab-event-playbook.md  console-handover-2026-04-26.md  contribution-protocol-draft.md  contribution-protocol.md  data-layer-audit.md  decisions-archive.md  decisions.md  discord-archiver-design.md  dispatch-brief-D-fix.md  dispatch-brief-D-mission.md  dispatch-brief-code-memory-bootstrap.md  dispatch-brief-code-memory-distill-autocommit.md  facts.json  (+36 more)
projects/bpt-next/rust/crates/commands/: Cargo.toml
projects/bpt-next/rust/crates/commands/src/: lib.rs
projects/bpt-next/rust/crates/identity/: Cargo.toml
projects/bpt-next/rust/crates/identity/src/: lib.rs
(+49729 files in other folders)
