[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
serde_json.workspace = true
# BPT-NEXT Phase D: /vault session archive encryption
age = { version = "0.10", default-features = false, features = ["armor"] }
