[package]
name = "identity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "BPT-NEXT identity resolver — multi-path probing for SVN / git / env / OS username with display-name mapping stored in ~/.biav/svn-identity.json"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
